style.css
/* ... */
  /* ========= Very small phones ========= */
  @media (max-width: 620px) {

      .header {
          padding-inline: 0.5rem;
      }

      .header1 .home {
          position: relative;
          right: 0.75rem;
      }

      .header1 .search {
          font-size: 0.75rem;
      }


      .header2 .psd div:nth-child(2),
      .header2 .psd div:nth-child(3) {
          display: none;
      }



      .header2 .setup {
          font-size: 0.8rem;
          gap: 1rem
      }

      .header2 .setup .login {
          padding: 0.25rem 0.25rem;
          font-size: 0.8rem;
          border-radius: 5px;
          margin-left: 0.5rem;
      }

      .list .song {
          height: 5rem;
          flex-direction: column;
          justify-content: space-around;
          align-items: center;
      }

      .song .playnow {
          font-size: 0.5rem;
          position: relative;
          left: 0.1rem;
      }

      h2 {
          font-size: 1rem;
          margin-bottom: 0;
      }

      .box {
          width: 100%;
          max-width: none;

      }

      .playbar .seekbar {
          width: 65%;
      }

      .cursongdisplay {
          display: none;
      }
  }

